--- a/src/index.ejs
+++ b/src/index.ejs
@@ -10,6 +10,7 @@
 	<style>
 		html,
 		body {
+			background-color: #444444;
 			margin: 0;
 			padding: 0;
 			height: 100%;
@@ -17,17 +18,20 @@
 		}
 
 		#pixi-content {
-			background: #000000;
-			width: 100%;
-			height: 100%;
+			margin: 2rem auto;
+			width: auto;
+  		height: auto;
+			align-self: center;
 		}
+
+
 	</style>
 
 </head>
 
 <body>
 	<noscript>Please enable JavaScript in your web browser to view this page.</noscript>
-	<div id="pixi-content"><canvas id="pixi-canvas" /></div>
+	<div id="pixi-content"><canvas id="pixi-canvas"></div>
 </body>
 
 </html>
