--- a/src/index.ejs
+++ b/src/index.ejs
@@ -13,26 +13,19 @@
 			background-color: #444444;
 			margin: 0;
 			padding: 0;
-			height: 100%;
+			height: 100vh;
 			overflow: hidden;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 		}
-
-		#pixi-content {
-			image-rendering: pixelated;
-			margin: 2rem auto;
-			width: auto;
-  		height: auto;
-			align-self: center;
-		}
-
-
 	</style>
 
 </head>
 
 <body>
 	<noscript>Please enable JavaScript in your web browser to view this page.</noscript>
-	<div id="pixi-content"><canvas id="pixi-canvas"></div>
+	<canvas id="pixi-canvas">
 </body>
 
 </html>
