--- a/src/index.ejs
+++ b/src/index.ejs
@@ -19,6 +19,12 @@
 			align-items: center;
 			justify-content: center;
 		}
+
+		#pixi-canvas {
+			image-rendering: pixelated;
+			height: 85% !important;
+			width: unset !important;
+		}
 	</style>
 
 </head>
